[package]
name = "topos"
version = "0.1.0"
authors = ["zypeh <zypeh.geek@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
logos = "0.12"
slotmap = "1.0"
bumpalo = { version = "3.6", features = ["collections"] } 
env_logger = "0.8"
log = "0.4"
salsa = "0.16" # incremental computing
rowan = "0.12" # lossless syntax trees
string-interner = "0.12"
smol_str = "0.1"

[dev-dependencies]
criterion = "0.3"

[[bench]]
name = "tokeniser_arena"
harness = false