cabal-version: 2.4

name: topos
version: 0.0.3
homepage: https://github.com/topoi-lang/topos
license: BSD-3-Clause

common haskell
  default-language: Haskell2010
  default-extensions: StrictData
  ghc-options:
    -Wall
    -Wname-shadowing

library
  import: haskell
  hs-source-dirs: src
  exposed-modules: Tokeniser
                 , Parser
  other-modules: Paths_topos
  build-depends:
    , base
    , Z-Data

source-repository head
  type: git
  location: https://github.com/topoi-lang/topos