cabal-version: 3.4

name: topos
version: 0.1.0
homepage: https://github.com/topoi-lang/topos
license: BSD-3-Clause

tested-with: GHC == 8.10.5

common haskell
  default-language: Haskell2010
  default-extensions: StrictData
  ghc-options:
    -Weverything
    -Wno-name-shadowing
    -Wno-missing-import-lists
    -Wno-safe
    -Wno-unsafe
    -Wno-implicit-prelude
    -Wno-name-shadowing
    -Wall-missed-specialisations
  if (impl(ghc >= 8.8))
    ghc-options: -Wno-missing-deriving-strategies
  if (impl(ghc >= 8.10))
    ghc-options:
      -Wno-missing-safe-haskell-mode
      -Wno-prepositive-qualified-module

executable topos
  hs-source-dirs: app
  main-is: Main.hs
  build-depends:
    , base
    , topos
    , Z-IO

library
  import: haskell
  hs-source-dirs: src
  exposed-modules: Tokeniser
                 , Parser
  other-modules: Paths_topos
  build-depends:
    , base
    , Z-Data

source-repository head
  type: git
  location: https://github.com/topoi-lang/topos